# zeus

./: .dockerignore  .editorconfig  .gdbinit  .gitignore  .lldbinit  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  Vagrantfile  build.config.debug.mk  build.config.mk  build.config.release.mk  build.rs  builder.sh  rustfmt.toml  test
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yaml  ci.yaml  release.yaml
.hooks/: pre-commit
apparmor/: zeus
apparmor/zeus.d/: docker
assets/: Makefile  social-image.xcf.xz
builder/: Dockerfile  package_builder.sh
completions/: zeus.bash  zeus.fish  zeus.zsh
docker/: Dockerfile
extra/: zeus
img/: Makefile
overlay/$CONFIG_DIR/: zeus.toml
overlay/$PREFIX/share/zeus/: builder
overlay/.hooks/: permissions.sh
overlay/.turboinstall/post-install/: 00-bin.sh  00-build_dir.sh  10-build_dir.sh
overlay/usr/lib/sysusers.d/: zeus.conf
overlay/usr/share/bash-completion/completions/: zeus
overlay/usr/share/fish/vendor_completions.d/: zeus.fish
overlay/usr/share/zsh/site-functions/: _zeus
overlay/{CONFIG_DIR}/: zeus.toml
pkg/: .gitignore  Dockerfile  Makefile  PACKAGE.md  PKGBUILD
pkg/arch/: Makefile  PKGBUILD
pkg/tar/: Makefile
profiles/: dev.env  dev.json  release.env  release.json
rootdir/.install_hooks.d/: 00-build_dir.sh
rootdir/etc/apparmor.d/: zeus
rootdir/usr/share/bash-completion/completions/: zeus
rootdir/usr/share/fish/vendor_completions.d/: zeus.fish
rootdir/usr/share/zsh/site-functions/: _zeus
runtimes/zeus_rt_custom/: Cargo.toml
runtimes/zeus_rt_custom/src/: lib.rs
runtimes/zeus_rt_docker/: Cargo.toml
runtimes/zeus_rt_docker/overlay/$DATA_DIR/: Dockerfile
runtimes/zeus_rt_docker/overlay/$PREFIX/share/zeus/: .dockerignore  Dockerfile
runtimes/zeus_rt_docker/src/: command.rs  lib.rs  models.rs
runtimes/zeus_rt_null/: Cargo.toml
runtimes/zeus_rt_null/src/: lib.rs
scripts/: build_info.sh  common.sh  helper.py  install.sh  make_package.sh  provision_vm.sh  tar.sh  version.sh
src/: aur.rs  build.rs  builder.rs  cache.rs  cli.rs  config.rs  constants.rs  database.rs  error.rs  ipc.rs  lib.rs  lock.rs  log.rs  machine.rs  main.rs  message.rs  operation.rs  ops.rs  package.rs  sync.rs  term.rs  unix.rs  util.rs  version.rs  zeus.rs
src/aur/: cache.rs  client.rs  mod.rs  pkg.rs
src/cli/: build.rs  completions.rs  mod.rs  query.rs  remove.rs  runtime.rs  sync.rs
src/config/: constants.rs  macros.rs  misc.rs  mod.rs  traits.rs
src/config/definition/: global.rs  mod.rs  query.rs  remove.rs  runtime.rs  sync.rs
src/constants/: mod.rs
src/db/: database.rs  git.rs  lock.rs  mod.rs  pkg.rs  tools.rs
src/ipc/: client.rs  error.rs  listener.rs  mod.rs
src/log/: macros.rs  mod.rs
src/machine/: manager.rs  mod.rs
src/operation/: build.rs
src/ops/: build.rs  completions.rs  misc.rs  mod.rs  query.rs  remove.rs  runtime.rs  sync.rs
src/package/: lock.rs  mod.rs
src/runtime/: error.rs  interface.rs  loader.rs  mod.rs
src/term/: mod.rs
xtask/: Cargo.toml  build.rs
xtask/src/: main.rs  tools.rs
zeus-aur/: Cargo.toml
zeus-aur/src/: cache.rs  client.rs  error.rs  lib.rs  pkg.rs
zeus-builder/: Cargo.toml
zeus-builder/src/: main.rs
zeus-cli/: Cargo.toml
zeus-cli/src/: main.rs
zeus-cli/src/cli/: build.rs  completions.rs  mod.rs  query.rs  remove.rs  runtime.rs  sync.rs
zeus-db/: Cargo.toml
zeus-db/src/: git.rs  lib.rs  lock.rs  makepkg.rs  pkg.rs
zeus-ipc/: Cargo.toml
zeus-ipc/src/: lib.rs
zeus-rt/: Cargo.toml  build.rs
zeus-rt/src/: interface.rs  lib.rs  loader.rs
zeus-term/: Cargo.toml
zeus-term/src/: lib.rs
zeus-types/: Cargo.toml  build.rs
zeus-types/src/: constants.rs  lib.rs  macros.rs  traits.rs  types.rs
zeus-types/src/definition/: build.rs  completions.rs  global.rs  mod.rs  query.rs
