[package]
name = "zeus"
edition = "2021"
version = "0.1.0"
authors = ["threadexio <pzarganitis@gmail.com>"]
description = "Containerized AUR helper"
homepage = "https://github.com/threadexio/zeus"
repository = "https://github.com/threadexio/zeus"
license = "GPL-3.0-or-later"
readme = "README.md"

build = "build.rs"
publish = false
default-run = "zeus"

[lib]
name = "zeus"
path = "src/lib.rs"

[[bin]]
name = "zeus"
path = "src/main.rs"

[[bin]]
name = "builder"
path = "src/builder.rs"

[workspace]
members = ["runtimes/*"]

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
const_format = { version = "0.2" }
concat-idents = "*"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
channels = { version = "0.6.1" }
toml = "0.7"

clap = { version = "4.1.4" }
clap_complete = { version = "4.1.1" }
inquire = "0.4"
colored = "2"

nix = { version = "0.26", features = ["fs"] }
fs4 = { version = "0.6.2" }
libloading = "0.7"

[build-dependencies]
pathdiff = "0.2"
fs4 = { version = "0.6", features = ["sync"] }
