[package]
name = "zeus"
edition = "2021"
version = "0.1.0"
authors = ["threadexio <pzarganitis@gmail.com>"]
description = "Containerized AUR helper"
homepage = "https://github.com/threadexio/zeus"
repository = "https://github.com/threadexio/zeus"
license = "GPL-3.0-or-later"
readme = "README.md"

build = "build.rs"
publish = false
default-run = "zeus"

[lib]
name = "zeus"
path = "src/lib.rs"

[[bin]]
name = "zeus"
path = "src/main.rs"

[[bin]]
name = "builder"
path = "src/builder.rs"

[workspace]
members = [
	"runtimes/zeus_rt_docker",
	"runtimes/zeus_rt_null",
	"runtimes/zeus_rt_custom",
]

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
const_format = { version = "0.2" }
chrono = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
channels = { version = "0.6.7" }
toml = "0.7"
rand = "0.8"

clap = { version = "4.1.6" }
clap_complete = { version = "4.1.2" }
atty = "0.2"
colored = "2"

nix = { version = "0.26", features = ["fs"] }
libloading = "0.7"
xxhash-rust = { version = "0.8.6", features = ["const_xxh3"] }

[build-dependencies]
pathdiff = "0.2"
