[workspace]
resolver = "2"
members = [
	"zeus-aur",
	"zeus-db",
	"zeus-ipc",
	"zeus-rt",
	"zeus-term",
	"zeus-types",
	"zeus-cli",
	"zeus-builder",
	"xtask",
	"runtimes/zeus_rt_docker",
	"runtimes/zeus_rt_null",
	"runtimes/zeus_rt_custom",
]
default-members = ["zeus-cli", "zeus-builder"]

[workspace.dependencies]
anyhow = "1.0"
atty = "0.2"
channels = { version = "0.7.0" }
chrono = { version = "0.4" }
clap = { version = "4.1.6" }
clap_complete = { version = "4.1.2" }
colored = "2"
const_format = { version = "0.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.7"
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "blocking"] }

nix = { version = "0.26", features = ["fs"] }
libloading = "0.7"

zeus-aur = { path = "./zeus-aur" }
zeus-db = { path = "./zeus-db" }
zeus-ipc = { path = "./zeus-ipc" }
zeus-rt = { path = "./zeus-rt" }
zeus-term = { path = "./zeus-term" }
zeus-types = { path = "./zeus-types" }

[package]
name = "zeus"
edition = "2021"
version = "0.1.0"
authors = ["threadexio <pzarganitis@gmail.com>"]
description = "Containerized AUR helper"
homepage = "https://github.com/threadexio/zeus"
repository = "https://github.com/threadexio/zeus"
license = "GPL-3.0-or-later"
readme = "README.md"

[dependencies]
zeus-rt = { workspace = true }
