[package]
name = "zeus-types"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
const_format = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

zeus-aur = { workspace = true }
zeus-term = { workspace = true }

[build-dependencies]
chrono = "0.4"
serde_json = "1.0"
whoami = "1.4.0"
