[package]
name = "zeus_rt_docker"
version = "0.1.0"
edition = "2021"
authors = ["threadexio"]
description = "Docker Runtime for the Zeus AUR helper"
license = "GPL-3.0-or-later"

# The following are necessary for any runtime
[lib]
name = "rt_docker"
crate-type = ["cdylib"]

[dependencies]
zeus = { path = "../../" }
